--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- ===================== NAVIGATION ===================== -->
   <nav id="desktop-nav">
-    <div class="logo">Portfolio</div>
+    <div class="logo">Maaz Qureshi</div>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
       <li><a href="#experience">Experience</a></li>
@@ -123,7 +123,7 @@
   <!-- ===================== ABOUT ===================== -->
   <section id="about">
     <p class="section__text__p1">Get To Know More</p>
-    <!-- <h1 class="title">About Me</h1> -->
+    <h1 class="title">About Me</h1>
 
     <!-- Text LEFT, Image RIGHT -->
     <div class="about-layout">
