--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Maaz Qureshi | Robotics Software Engineer</title>
+  <title>Maaz | ProRobo</title>
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
@@ -15,7 +15,7 @@
 
   <!-- ===================== NAVIGATION ===================== -->
   <nav id="desktop-nav" class="container">
-    <div class="logo">Maaz Qureshi</div>
+    <div class="logo">Portfolio</div>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
       <li><a href="#experience">Experience</a></li>
@@ -56,7 +56,7 @@
         <h1 class="title">Maaz Qureshi</h1>
 
         <!-- Stronger title -->
-        <p class="section__text__p2">Robotics Software Engineer (AI/ML, Perception & Autonomy)</p>
+        <p class="section__text__p2"> Software Engineer (AI/ML, Robotics Perception-Autonomy)</p>
 
         <!-- ===================== HERO TREE (CLICKABLE) ===================== -->
         <div class="logo-tree" aria-label="Career and education tree">
@@ -149,7 +149,7 @@
     <div class="about-layout">
       <div class="about-text">
         <p class="justify">
-          I build intelligent robotic systems that combine perception, autonomy, and robust software engineering.
+          Maaz build intelligent software dev that combine robot perception, autonomy, and AI/ML software engineering.
           My work spans multi-robot SLAM and volumetric mapping, collaborative manipulation and motion planning,
           mmWave 4D radar + RGB-D perception, and connected robotics over 5G.
         </p>
@@ -163,8 +163,7 @@
         </p>
 
         <p class="justify">
-          Earlier, I developed swarm robotics systems and field robotics workflows, including underwater inspection missions
-          using ROV/AUV platforms with sonar/camera sensing.
+          Earlier in my journey, I developed a strong interest in swarm robotics, which led to a 3rd-place award for the Best Engineering Science. Later, I supervised a NUST University  team for the Aerotech IMechE (United Kingdom) 2022 competition, where we developed a hexacopter for a locust-swarm autonomy mission.
         </p>
       </div>
 
