--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       <!-- 1: CRADMap -->
       <div class="research-box" data-tags="robotics ai">
         <div class="research-media">
-          <img src="./assets/project1.jpg" class="project-thumb-lg" alt="CRADMap Project" />
+          <img src="./assets/project1.png" class="project-thumb-lg" alt="CRADMap Project" />
         </div>
         <div class="research-text">
           <h2 class="project-title">CRADMap: Applied Distributed Volumetric Mapping with 5G-Connected Multi-Robots and 4D Radar Perception</h2>
@@ -412,7 +412,7 @@
       <!-- 2: RAPTAR -->
       <div class="research-box" data-tags="robotics ai">
         <div class="research-media">
-          <img src="./assets/project2.jpg" class="project-thumb-lg" alt="RAPTAR Project" />
+          <img src="./assets/project2.png" class="project-thumb-lg" alt="RAPTAR Project" />
         </div>
         <div class="research-text">
           <h2 class="project-title">RAPTAR: Radar Radiation Pattern Acquisition through Automated Collaborative Robotics</h2>
@@ -433,7 +433,7 @@
       <!-- 3: NAO HRI -->
       <div class="research-box" data-tags="ai robotics">
         <div class="research-media">
-          <img src="./assets/project3.jpg" class="project-thumb-lg" alt="Humanoid Robotics Project" />
+          <img src="./assets/project3.png" class="project-thumb-lg" alt="Humanoid Robotics Project" />
         </div>
         <div class="research-text">
           <h2 class="project-title">Humanoid Robotics: Non-Verbal Gesture Learning</h2>
@@ -452,7 +452,7 @@
       <!-- 4: Swarm -->
       <div class="research-box" data-tags="robotics">
         <div class="research-media">
-          <img src="./assets/project4.jpg" class="project-thumb-lg" alt="Swarm Autobots Project" />
+          <img src="./assets/project4.png" class="project-thumb-lg" alt="Swarm Autobots Project" />
         </div>
         <div class="research-text">
           <h2 class="project-title">SWARM Autobots: Robust Synchronized Control for Multi-Robot Path Planning</h2>
