--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
       <!-- 3: NAO HRI -->
       <div class="research-box" data-tags="ai robotics">
         <div class="research-media">
-          <img src="./assets/project3.png" class="project-thumb-lg" alt="Humanoid Robotics Project" />
+          <img src="./assets/project" class="project-thumb-lg" alt="Humanoid Robotics Project" />
         </div>
         <div class="research-text">
           <h2 class="project-title">Humanoid Robotics: Non-Verbal Gesture Learning</h2>
