--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <!-- ===================== ABOUT ===================== -->
   <section id="about" class="container">
     <p class="section__text__p1">Get To Know More</p>
-    <h1 class="title">About Me</h1>
+   <!-- <h1 class="title">About Me</h1> -->
 
     <!-- Text LEFT, Image RIGHT -->
     <div class="about-layout">
