--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
         </p>
 
         <p class="justify">
-          Earlier, I developed swarm robotics systems and field robotics workflows, including underwater inspection missions
-          using ROV/AUV platforms with sonar/camera sensing.
+          Earlier in my life, I developed strong interest for swarm robotics and ending up developing novel software-hardware autonomy and won 3rd best engineering project in b.sc. Later, I supervised the NUST University team in iMech United Kigndom 2022 cometition for developing hexacopter for locust swarm autonomy mission.
         </p>
       </div>
 
@@ -517,7 +516,7 @@
   <!-- ===================== CONTACT ===================== -->
   <section id="contact" class="container">
     <p class="section__text__p1">Get in Touch</p>
-    <h1 class="title">Contact Me</h1>
+    <h1 class="title">Contact</h1>
 
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
