--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
     <div class="about-layout">
       <div class="about-text">
         <p class="justify">
-          I build intelligent robotic systems that combine perception, autonomy, and robust software engineering.
-          My work spans multi-robot SLAM and volumetric mapping, collaborative manipulation and motion planning,
-          mmWave 4D radar + RGB-D perception, and connected robotics over 5G.
+          I build intelligent software that combine perception, autonomy, and AI/ML software engineering.
+          My work spans multi-robot SLAM and volumetric mapping, manipulation: motion planning,
+          mmWave 4D radar + RGB-D perception, connected robotics over 5G, and computational intelligence: reinforcenment learning (RL & IL).
         </p>
 
         <p class="justify">
